[gd_scene load_steps=16 format=3 uid="uid://do2xkxu3ihh6c"]

[ext_resource type="Script" path="res://BallIsStick.gd" id="1_4cyc7"]
[ext_resource type="Script" path="res://Field.cs" id="1_dghwm"]
[ext_resource type="Texture2D" uid="uid://dnfavt5t8xpm0" path="res://Border.png" id="1_hog6v"]
[ext_resource type="Script" path="res://Timer.gd" id="3_dsuex"]
[ext_resource type="Texture2D" uid="uid://bj5dee653jb5c" path="res://funnel.svg" id="5_ojgky"]
[ext_resource type="Script" path="res://Funnel.cs" id="5_om4j3"]
[ext_resource type="PackedScene" uid="uid://m3m13snywrve" path="res://Hole.tscn" id="6_o66vm"]
[ext_resource type="Script" path="res://Holes.gd" id="6_xj2uw"]
[ext_resource type="Script" path="res://CountDown.cs" id="7_5j815"]
[ext_resource type="Script" path="res://RoundTimer.cs" id="9_xaoh2"]

[sub_resource type="PlaneMesh" id="PlaneMesh_bkpmb"]
size = Vector2(400, 880)
orientation = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gy644"]
texture = ExtResource("1_hog6v")
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
42:0/0 = 0
43:0/0 = 0
44:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
42:1/0 = 0
43:1/0 = 0
44:1/0 = 0
45:1/0 = 0
46:1/0 = 0
47:1/0 = 0
48:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
45:2/0 = 0
46:2/0 = 0
47:2/0 = 0
48:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
44:3/0 = 0
45:3/0 = 0
46:3/0 = 0
47:3/0 = 0
48:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
44:4/0 = 0
45:4/0 = 0
46:4/0 = 0
47:4/0 = 0
48:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
44:5/0 = 0
45:5/0 = 0
46:5/0 = 0
47:5/0 = 0
48:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
43:6/0 = 0
44:6/0 = 0
45:6/0 = 0
46:6/0 = 0
47:6/0 = 0
48:6/0 = 0
49:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
43:7/0 = 0
44:7/0 = 0
45:7/0 = 0
46:7/0 = 0
47:7/0 = 0
48:7/0 = 0
49:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
45:8/0 = 0
46:8/0 = 0
47:8/0 = 0
48:8/0 = 0
49:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
46:9/0 = 0
47:9/0 = 0
48:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
46:10/0 = 0
47:10/0 = 0
48:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
46:11/0 = 0
47:11/0 = 0
48:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
47:12/0 = 0
48:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
47:13/0 = 0
48:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
47:14/0 = 0
48:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
47:15/0 = 0
48:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
47:16/0 = 0
48:16/0 = 0
1:17/0 = 0
2:17/0 = 0
22:17/0 = 0
23:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
47:17/0 = 0
48:17/0 = 0
1:18/0 = 0
2:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
45:18/0 = 0
46:18/0 = 0
47:18/0 = 0
48:18/0 = 0
1:19/0 = 0
2:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
31:19/0 = 0
32:19/0 = 0
42:19/0 = 0
43:19/0 = 0
44:19/0 = 0
45:19/0 = 0
46:19/0 = 0
47:19/0 = 0
48:19/0 = 0
1:20/0 = 0
2:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
31:20/0 = 0
32:20/0 = 0
33:20/0 = 0
39:20/0 = 0
40:20/0 = 0
41:20/0 = 0
42:20/0 = 0
43:20/0 = 0
44:20/0 = 0
45:20/0 = 0
46:20/0 = 0
47:20/0 = 0
48:20/0 = 0
1:21/0 = 0
2:21/0 = 0
22:21/0 = 0
23:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0
31:21/0 = 0
32:21/0 = 0
33:21/0 = 0
34:21/0 = 0
35:21/0 = 0
36:21/0 = 0
37:21/0 = 0
38:21/0 = 0
39:21/0 = 0
40:21/0 = 0
41:21/0 = 0
42:21/0 = 0
43:21/0 = 0
44:21/0 = 0
45:21/0 = 0
46:21/0 = 0
47:21/0 = 0
48:21/0 = 0
1:22/0 = 0
2:22/0 = 0
22:22/0 = 0
23:22/0 = 0
25:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
30:22/0 = 0
31:22/0 = 0
32:22/0 = 0
33:22/0 = 0
34:22/0 = 0
35:22/0 = 0
36:22/0 = 0
37:22/0 = 0
38:22/0 = 0
39:22/0 = 0
40:22/0 = 0
41:22/0 = 0
42:22/0 = 0
43:22/0 = 0
44:22/0 = 0
45:22/0 = 0
46:22/0 = 0
47:22/0 = 0
48:22/0 = 0
1:23/0 = 0
2:23/0 = 0
22:23/0 = 0
23:23/0 = 0
25:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
30:23/0 = 0
31:23/0 = 0
32:23/0 = 0
33:23/0 = 0
34:23/0 = 0
35:23/0 = 0
36:23/0 = 0
37:23/0 = 0
38:23/0 = 0
39:23/0 = 0
40:23/0 = 0
41:23/0 = 0
42:23/0 = 0
43:23/0 = 0
44:23/0 = 0
45:23/0 = 0
46:23/0 = 0
47:23/0 = 0
48:23/0 = 0
1:24/0 = 0
2:24/0 = 0
22:24/0 = 0
23:24/0 = 0
28:24/0 = 0
29:24/0 = 0
30:24/0 = 0
43:24/0 = 0
44:24/0 = 0
45:24/0 = 0
1:25/0 = 0
2:25/0 = 0
22:25/0 = 0
23:25/0 = 0
25:25/0 = 0
26:25/0 = 0
27:25/0 = 0
28:25/0 = 0
29:25/0 = 0
30:25/0 = 0
31:25/0 = 0
32:25/0 = 0
33:25/0 = 0
34:25/0 = 0
35:25/0 = 0
36:25/0 = 0
37:25/0 = 0
38:25/0 = 0
39:25/0 = 0
40:25/0 = 0
41:25/0 = 0
42:25/0 = 0
43:25/0 = 0
44:25/0 = 0
45:25/0 = 0
46:25/0 = 0
47:25/0 = 0
48:25/0 = 0
1:26/0 = 0
2:26/0 = 0
22:26/0 = 0
23:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
28:26/0 = 0
29:26/0 = 0
30:26/0 = 0
31:26/0 = 0
32:26/0 = 0
33:26/0 = 0
34:26/0 = 0
35:26/0 = 0
36:26/0 = 0
37:26/0 = 0
38:26/0 = 0
39:26/0 = 0
40:26/0 = 0
41:26/0 = 0
42:26/0 = 0
43:26/0 = 0
44:26/0 = 0
45:26/0 = 0
46:26/0 = 0
47:26/0 = 0
48:26/0 = 0
1:27/0 = 0
2:27/0 = 0
22:27/0 = 0
23:27/0 = 0
25:27/0 = 0
26:27/0 = 0
27:27/0 = 0
28:27/0 = 0
29:27/0 = 0
30:27/0 = 0
31:27/0 = 0
32:27/0 = 0
33:27/0 = 0
34:27/0 = 0
41:27/0 = 0
42:27/0 = 0
43:27/0 = 0
44:27/0 = 0
45:27/0 = 0
46:27/0 = 0
47:27/0 = 0
48:27/0 = 0
1:28/0 = 0
2:28/0 = 0
22:28/0 = 0
23:28/0 = 0
25:28/0 = 0
26:28/0 = 0
27:28/0 = 0
28:28/0 = 0
43:28/0 = 0
44:28/0 = 0
45:28/0 = 0
46:28/0 = 0
47:28/0 = 0
48:28/0 = 0
1:29/0 = 0
2:29/0 = 0
22:29/0 = 0
23:29/0 = 0
25:29/0 = 0
26:29/0 = 0
27:29/0 = 0
46:29/0 = 0
47:29/0 = 0
48:29/0 = 0
1:30/0 = 0
2:30/0 = 0
22:30/0 = 0
23:30/0 = 0
25:30/0 = 0
26:30/0 = 0
47:30/0 = 0
48:30/0 = 0
1:31/0 = 0
2:31/0 = 0
21:31/0 = 0
22:31/0 = 0
23:31/0 = 0
25:31/0 = 0
26:31/0 = 0
27:31/0 = 0
47:31/0 = 0
48:31/0 = 0
1:32/0 = 0
2:32/0 = 0
22:32/0 = 0
23:32/0 = 0
25:32/0 = 0
26:32/0 = 0
27:32/0 = 0
28:32/0 = 0
47:32/0 = 0
48:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
22:33/0 = 0
23:33/0 = 0
25:33/0 = 0
26:33/0 = 0
27:33/0 = 0
28:33/0 = 0
29:33/0 = 0
30:33/0 = 0
31:33/0 = 0
43:33/0 = 0
44:33/0 = 0
45:33/0 = 0
46:33/0 = 0
47:33/0 = 0
48:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
22:34/0 = 0
23:34/0 = 0
25:34/0 = 0
26:34/0 = 0
27:34/0 = 0
28:34/0 = 0
29:34/0 = 0
30:34/0 = 0
31:34/0 = 0
32:34/0 = 0
33:34/0 = 0
34:34/0 = 0
35:34/0 = 0
36:34/0 = 0
37:34/0 = 0
38:34/0 = 0
39:34/0 = 0
40:34/0 = 0
41:34/0 = 0
42:34/0 = 0
43:34/0 = 0
44:34/0 = 0
45:34/0 = 0
46:34/0 = 0
47:34/0 = 0
48:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
22:35/0 = 0
23:35/0 = 0
25:35/0 = 0
26:35/0 = 0
27:35/0 = 0
28:35/0 = 0
29:35/0 = 0
30:35/0 = 0
31:35/0 = 0
32:35/0 = 0
33:35/0 = 0
34:35/0 = 0
35:35/0 = 0
36:35/0 = 0
37:35/0 = 0
38:35/0 = 0
39:35/0 = 0
40:35/0 = 0
41:35/0 = 0
42:35/0 = 0
43:35/0 = 0
44:35/0 = 0
45:35/0 = 0
46:35/0 = 0
47:35/0 = 0
48:35/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
21:36/0 = 0
22:36/0 = 0
23:36/0 = 0
26:36/0 = 0
27:36/0 = 0
28:36/0 = 0
29:36/0 = 0
30:36/0 = 0
31:36/0 = 0
32:36/0 = 0
33:36/0 = 0
34:36/0 = 0
35:36/0 = 0
36:36/0 = 0
37:36/0 = 0
38:36/0 = 0
39:36/0 = 0
40:36/0 = 0
41:36/0 = 0
42:36/0 = 0
43:36/0 = 0
44:36/0 = 0
45:36/0 = 0
46:36/0 = 0
47:36/0 = 0
48:36/0 = 0
1:37/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
21:37/0 = 0
22:37/0 = 0
23:37/0 = 0
25:37/0 = 0
26:37/0 = 0
27:37/0 = 0
28:37/0 = 0
29:37/0 = 0
30:37/0 = 0
31:37/0 = 0
32:37/0 = 0
33:37/0 = 0
34:37/0 = 0
35:37/0 = 0
36:37/0 = 0
37:37/0 = 0
38:37/0 = 0
39:37/0 = 0
40:37/0 = 0
41:37/0 = 0
42:37/0 = 0
43:37/0 = 0
44:37/0 = 0
45:37/0 = 0
46:37/0 = 0
47:37/0 = 0
48:37/0 = 0
49:37/0 = 0
1:38/0 = 0
2:38/0 = 0
3:38/0 = 0
4:38/0 = 0
5:38/0 = 0
19:38/0 = 0
20:38/0 = 0
21:38/0 = 0
22:38/0 = 0
23:38/0 = 0
25:38/0 = 0
26:38/0 = 0
27:38/0 = 0
28:38/0 = 0
29:38/0 = 0
30:38/0 = 0
31:38/0 = 0
32:38/0 = 0
33:38/0 = 0
34:38/0 = 0
35:38/0 = 0
36:38/0 = 0
37:38/0 = 0
38:38/0 = 0
39:38/0 = 0
40:38/0 = 0
41:38/0 = 0
42:38/0 = 0
43:38/0 = 0
44:38/0 = 0
45:38/0 = 0
46:38/0 = 0
47:38/0 = 0
48:38/0 = 0
49:38/0 = 0
1:39/0 = 0
2:39/0 = 0
3:39/0 = 0
4:39/0 = 0
5:39/0 = 0
18:39/0 = 0
19:39/0 = 0
20:39/0 = 0
21:39/0 = 0
22:39/0 = 0
23:39/0 = 0
25:39/0 = 0
26:39/0 = 0
27:39/0 = 0
28:39/0 = 0
29:39/0 = 0
32:39/0 = 0
33:39/0 = 0
34:39/0 = 0
35:39/0 = 0
36:39/0 = 0
37:39/0 = 0
38:39/0 = 0
39:39/0 = 0
40:39/0 = 0
41:39/0 = 0
42:39/0 = 0
45:39/0 = 0
46:39/0 = 0
47:39/0 = 0
48:39/0 = 0
49:39/0 = 0
1:40/0 = 0
2:40/0 = 0
3:40/0 = 0
4:40/0 = 0
5:40/0 = 0
6:40/0 = 0
7:40/0 = 0
17:40/0 = 0
18:40/0 = 0
19:40/0 = 0
20:40/0 = 0
21:40/0 = 0
22:40/0 = 0
23:40/0 = 0
25:40/0 = 0
26:40/0 = 0
27:40/0 = 0
33:40/0 = 0
34:40/0 = 0
35:40/0 = 0
36:40/0 = 0
37:40/0 = 0
38:40/0 = 0
39:40/0 = 0
46:40/0 = 0
47:40/0 = 0
48:40/0 = 0
49:40/0 = 0
1:41/0 = 0
2:41/0 = 0
3:41/0 = 0
4:41/0 = 0
5:41/0 = 0
6:41/0 = 0
7:41/0 = 0
8:41/0 = 0
15:41/0 = 0
16:41/0 = 0
17:41/0 = 0
18:41/0 = 0
19:41/0 = 0
20:41/0 = 0
21:41/0 = 0
22:41/0 = 0
23:41/0 = 0
25:41/0 = 0
26:41/0 = 0
35:41/0 = 0
36:41/0 = 0
37:41/0 = 0
38:41/0 = 0
47:41/0 = 0
48:41/0 = 0
49:41/0 = 0
1:42/0 = 0
2:42/0 = 0
3:42/0 = 0
4:42/0 = 0
5:42/0 = 0
6:42/0 = 0
7:42/0 = 0
8:42/0 = 0
14:42/0 = 0
15:42/0 = 0
16:42/0 = 0
17:42/0 = 0
18:42/0 = 0
19:42/0 = 0
20:42/0 = 0
21:42/0 = 0
22:42/0 = 0
23:42/0 = 0
25:42/0 = 0
26:42/0 = 0
35:42/0 = 0
36:42/0 = 0
37:42/0 = 0
38:42/0 = 0
48:42/0 = 0
49:42/0 = 0
1:43/0 = 0
2:43/0 = 0
3:43/0 = 0
4:43/0 = 0
5:43/0 = 0
6:43/0 = 0
7:43/0 = 0
8:43/0 = 0
9:43/0 = 0
13:43/0 = 0
14:43/0 = 0
15:43/0 = 0
16:43/0 = 0
17:43/0 = 0
18:43/0 = 0
19:43/0 = 0
20:43/0 = 0
21:43/0 = 0
22:43/0 = 0
23:43/0 = 0
25:43/0 = 0
26:43/0 = 0
35:43/0 = 0
36:43/0 = 0
37:43/0 = 0
38:43/0 = 0
48:43/0 = 0
49:43/0 = 0
1:44/0 = 0
2:44/0 = 0
3:44/0 = 0
4:44/0 = 0
5:44/0 = 0
6:44/0 = 0
7:44/0 = 0
8:44/0 = 0
9:44/0 = 0
10:44/0 = 0
11:44/0 = 0
12:44/0 = 0
13:44/0 = 0
14:44/0 = 0
15:44/0 = 0
16:44/0 = 0
17:44/0 = 0
18:44/0 = 0
19:44/0 = 0
20:44/0 = 0
21:44/0 = 0
22:44/0 = 0
23:44/0 = 0
25:44/0 = 0
26:44/0 = 0
35:44/0 = 0
36:44/0 = 0
37:44/0 = 0
38:44/0 = 0
48:44/0 = 0
49:44/0 = 0
1:45/0 = 0
2:45/0 = 0
3:45/0 = 0
4:45/0 = 0
5:45/0 = 0
6:45/0 = 0
7:45/0 = 0
8:45/0 = 0
9:45/0 = 0
10:45/0 = 0
11:45/0 = 0
12:45/0 = 0
13:45/0 = 0
14:45/0 = 0
15:45/0 = 0
16:45/0 = 0
17:45/0 = 0
18:45/0 = 0
19:45/0 = 0
20:45/0 = 0
21:45/0 = 0
22:45/0 = 0
23:45/0 = 0
24:45/0 = 0
25:45/0 = 0
26:45/0 = 0
27:45/0 = 0
35:45/0 = 0
36:45/0 = 0
37:45/0 = 0
38:45/0 = 0
39:45/0 = 0
47:45/0 = 0
48:45/0 = 0
49:45/0 = 0
1:46/0 = 0
2:46/0 = 0
3:46/0 = 0
4:46/0 = 0
5:46/0 = 0
6:46/0 = 0
7:46/0 = 0
8:46/0 = 0
9:46/0 = 0
10:46/0 = 0
11:46/0 = 0
12:46/0 = 0
13:46/0 = 0
14:46/0 = 0
15:46/0 = 0
16:46/0 = 0
17:46/0 = 0
18:46/0 = 0
19:46/0 = 0
20:46/0 = 0
21:46/0 = 0
22:46/0 = 0
23:46/0 = 0
24:46/0 = 0
25:46/0 = 0
26:46/0 = 0
27:46/0 = 0
28:46/0 = 0
32:46/0 = 0
33:46/0 = 0
34:46/0 = 0
35:46/0 = 0
36:46/0 = 0
37:46/0 = 0
38:46/0 = 0
39:46/0 = 0
40:46/0 = 0
41:46/0 = 0
45:46/0 = 0
46:46/0 = 0
47:46/0 = 0
48:46/0 = 0
49:46/0 = 0
1:47/0 = 0
2:47/0 = 0
3:47/0 = 0
4:47/0 = 0
5:47/0 = 0
6:47/0 = 0
7:47/0 = 0
8:47/0 = 0
9:47/0 = 0
10:47/0 = 0
11:47/0 = 0
12:47/0 = 0
13:47/0 = 0
14:47/0 = 0
15:47/0 = 0
16:47/0 = 0
17:47/0 = 0
18:47/0 = 0
19:47/0 = 0
20:47/0 = 0
21:47/0 = 0
22:47/0 = 0
23:47/0 = 0
25:47/0 = 0
26:47/0 = 0
27:47/0 = 0
28:47/0 = 0
29:47/0 = 0
30:47/0 = 0
31:47/0 = 0
32:47/0 = 0
33:47/0 = 0
34:47/0 = 0
35:47/0 = 0
36:47/0 = 0
37:47/0 = 0
38:47/0 = 0
39:47/0 = 0
40:47/0 = 0
41:47/0 = 0
42:47/0 = 0
43:47/0 = 0
44:47/0 = 0
45:47/0 = 0
46:47/0 = 0
47:47/0 = 0
48:47/0 = 0
49:47/0 = 0
1:48/0 = 0
2:48/0 = 0
3:48/0 = 0
4:48/0 = 0
5:48/0 = 0
6:48/0 = 0
7:48/0 = 0
8:48/0 = 0
9:48/0 = 0
10:48/0 = 0
11:48/0 = 0
12:48/0 = 0
13:48/0 = 0
14:48/0 = 0
15:48/0 = 0
16:48/0 = 0
17:48/0 = 0
18:48/0 = 0
19:48/0 = 0
20:48/0 = 0
21:48/0 = 0
22:48/0 = 0
23:48/0 = 0
25:48/0 = 0
26:48/0 = 0
27:48/0 = 0
28:48/0 = 0
29:48/0 = 0
30:48/0 = 0
31:48/0 = 0
32:48/0 = 0
33:48/0 = 0
34:48/0 = 0
35:48/0 = 0
36:48/0 = 0
37:48/0 = 0
38:48/0 = 0
39:48/0 = 0
40:48/0 = 0
41:48/0 = 0
42:48/0 = 0
43:48/0 = 0
44:48/0 = 0
45:48/0 = 0
46:48/0 = 0
47:48/0 = 0
48:48/0 = 0
49:48/0 = 0
3:49/0 = 0
4:49/0 = 0
5:49/0 = 0
6:49/0 = 0
0:2/0 = 0
2:0/0 = 0
1:0/0 = 0
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_6hmmw"]
sources/0 = SubResource("TileSetAtlasSource_gy644")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvc3h"]
size = Vector2(166, 1400)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nkfda"]
size = Vector2(700, 266)

[node name="Main" type="Node2D"]
position = Vector2(210, 450)
script = ExtResource("1_4cyc7")

[node name="Funnel" type="Sprite2D" parent="."]
show_behind_parent = true
light_mask = 0
z_index = 10
y_sort_enabled = true
texture_filter = 1
position = Vector2(170, -417)
rotation = -3.14159
scale = Vector2(2, 2)
texture = ExtResource("5_ojgky")
script = ExtResource("5_om4j3")

[node name="Timer" type="Timer" parent="Funnel"]

[node name="Balls" type="Node" parent="."]

[node name="Field" type="MeshInstance2D" parent="."]
modulate = Color(0, 0, 0, 1)
mesh = SubResource("PlaneMesh_bkpmb")
script = ExtResource("1_dghwm")

[node name="Rods" type="Node" parent="Field"]

[node name="Timer" type="Timer" parent="Field"]
autostart = true
script = ExtResource("3_dsuex")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Border" type="TileMap" parent="."]
tile_set = SubResource("TileSet_6hmmw")
format = 2
layer_0/tile_data = PackedInt32Array(-1310757, 0, 0, -1245221, 0, 1, -1179685, 0, 2, -1310756, 65536, 0, -1638416, 0, 0, -1572880, 0, 1, -1507344, 0, 2, -1638414, 131072, 0, -1835022, 0, 0, -1769486, 0, 1, -1703950, 0, 2, -1835021, 65536, 0, -1769485, 65536, 1, -1703949, 65536, 2, -1835020, 131072, 0, -1769484, 131072, 1, -1834997, 1441792, 1, -1834996, 1507328, 1, -1769460, 1507328, 2, -1769479, 458752, 1, -1769478, 524288, 1, -1769477, 589824, 1, -1769476, 655360, 1, -1769475, 720896, 1, -1769474, 786432, 1, -1769473, 786432, 1, -1835008, 786432, 1, -1835007, 851968, 1, -1835006, 917504, 1, -1835005, 983040, 1, -1835004, 1048576, 1, -1835003, 1114112, 1, -1835002, 1179648, 1, -1835001, 1245184, 1, -1835000, 1310720, 1, -1834999, 1376256, 1, -1834998, 1441792, 1, -1769483, 196608, 1, -1769482, 262144, 1, -1769481, 327680, 1, -1769480, 393216, 1, -1638413, 65536, 3, -1572877, 65536, 4, -1507341, 65536, 5, -1441805, 65536, 6, -1376269, 65536, 7, -1310733, 65536, 8, -1245197, 65536, 9, -1179661, 65536, 10, -1114125, 65536, 11, -1048589, 65536, 12, -983053, 65536, 13, -917517, 65536, 14, -851981, 65536, 15, -786445, 65536, 16, -720909, 65536, 17, -655373, 65536, 18, -589837, 65536, 19, -524301, 65536, 20, -458765, 65536, 21, -393229, 65536, 22, -327693, 65536, 23, -262157, 65536, 24, -196621, 65536, 25, -131085, 65536, 26, -65549, 65536, 27, -13, 65536, 28, 65523, 65536, 29, 131059, 65536, 30, 196595, 65536, 31, 262131, 65536, 32, 327667, 65536, 33, 393203, 65536, 34, 458739, 65536, 35, 524275, 65536, 36, 589811, 65536, 37, 655347, 65536, 38, 720883, 65536, 39, 786419, 65536, 40, 851955, 65536, 41, 917491, 65536, 42, 983027, 65536, 41, 1048563, 65536, 42, 1114099, 65536, 43, 1179635, 65536, 41, 1245171, 65536, 42, 1310707, 65536, 43, 1376243, 65536, 44, 1441779, 65536, 45, 1507315, 65536, 46, 1572851, 65536, 44, 1638387, 65536, 45, 1703923, 65536, 46, 1769459, 65536, 47, 1834995, 65536, 48, 1834996, 131072, 48, 1834997, 196608, 48, 1834998, 262144, 48, 1834999, 327680, 48, 1835000, 393216, 48, 1835001, 458752, 48, 1835002, 524288, 48, 1835003, 589824, 48, 1835004, 655360, 48, 1835005, 720896, 48, 1835006, 786432, 48, 1835007, 851968, 48, 1769472, 917504, 48, 1769473, 983040, 48, 1769474, 1048576, 48, 1769475, 1114112, 48, 1769476, 1179648, 48, 1769477, 1245184, 48, 1769481, 1310720, 48, 1769482, 1376256, 48, 1769483, 1441792, 48, 1769484, 1507328, 48, 1769478, 1310720, 48, 1769479, 1310720, 48, 1769480, 1310720, 48, 1114124, 1507328, 38, 1179660, 1507328, 39, 1245196, 1507328, 40, 1310732, 1507328, 41, 1376268, 1507328, 42, 1441804, 1507328, 43, 1507340, 1507328, 44, 1572876, 1507328, 45, 1638412, 1507328, 46, 1703948, 1507328, 47, 196620, 1507328, 24, 262156, 1507328, 25, 327692, 1507328, 26, 393228, 1507328, 27, 458764, 1507328, 28, 524300, 1507328, 29, 589836, 1507328, 30, 655372, 1507328, 31, 720908, 1507328, 32, 786444, 1507328, 33, 851980, 1507328, 34, 917516, 1507328, 35, 983052, 1507328, 36, 1048588, 1507328, 37, -851956, 1507328, 8, -786420, 1507328, 9, -720884, 1507328, 10, -655348, 1507328, 11, -589812, 1507328, 12, -524276, 1507328, 13, -458740, 1507328, 14, -393204, 1507328, 15, -327668, 1507328, 16, -262132, 1507328, 17, -196596, 1507328, 18, -131060, 1507328, 19, -65524, 1507328, 20, 12, 1507328, 21, 65548, 1507328, 22, 131084, 1507328, 23, -1703924, 1507328, 3, -1638388, 1507328, 4, -1572852, 1507328, 5, -1507316, 1507328, 6, -1441780, 1507328, 3, -1376244, 1507328, 4, -1310708, 1507328, 5, -1245172, 1507328, 6, -1179636, 1507328, 3, -1114100, 1507328, 4, -1048564, 1507328, 5, -983028, 1507328, 6, -917492, 1507328, 7)

[node name="StaticBody2D" type="StaticBody2D" parent="Border"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/StaticBody2D"]
position = Vector2(-275, 0)
shape = SubResource("RectangleShape2D_cvc3h")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border/StaticBody2D"]
position = Vector2(275, 0)
shape = SubResource("RectangleShape2D_cvc3h")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border/StaticBody2D"]
position = Vector2(0, 565)
shape = SubResource("RectangleShape2D_nkfda")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Border/StaticBody2D"]
position = Vector2(0, -565)
shape = SubResource("RectangleShape2D_nkfda")

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -56.0
offset_top = -448.0
offset_right = -16.0
offset_bottom = -408.0

[node name="Area2D" type="Area2D" parent="Control"]

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Control/Area2D"]
position = Vector2(-219, 448)
shape = SubResource("RectangleShape2D_cvc3h")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Control/Area2D"]
position = Vector2(331, 448)
shape = SubResource("RectangleShape2D_cvc3h")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Control/Area2D"]
position = Vector2(56, 909)
shape = SubResource("RectangleShape2D_nkfda")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Control/Area2D"]
position = Vector2(56, -89)
shape = SubResource("RectangleShape2D_nkfda")

[node name="Start" type="Button" parent="Control"]
top_level = true
layout_mode = 2
offset_left = 19.0
offset_right = 65.0
offset_bottom = 31.0
scale = Vector2(1, 0.6)
text = "Start"

[node name="New" type="Button" parent="Control"]
top_level = true
layout_mode = 2
offset_left = 68.0
offset_right = 111.0
offset_bottom = 31.0
scale = Vector2(1, 0.6)
text = "New"

[node name="Reset" type="Button" parent="Control"]
top_level = true
layout_mode = 2
offset_left = 114.0
offset_right = 165.0
offset_bottom = 31.0
scale = Vector2(1, 0.6)
text = "Reset"

[node name="Counter" type="RichTextLabel" parent="Control"]
top_level = true
layout_mode = 0
offset_left = 177.0
offset_top = -1.0
offset_right = 217.0
offset_bottom = 19.0
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0

[node name="Points" type="RichTextLabel" parent="Control"]
top_level = true
layout_mode = 0
offset_left = 224.0
offset_top = -1.0
offset_right = 264.0
offset_bottom = 19.0
bbcode_enabled = true
text = "0"
scroll_active = false
autowrap_mode = 0

[node name="CountDown" type="RichTextLabel" parent="Control"]
top_level = true
layout_mode = 0
offset_left = 362.0
offset_top = -1.0
offset_right = 402.0
offset_bottom = 19.0
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("7_5j815")

[node name="Holes" type="Node" parent="."]
script = ExtResource("6_xj2uw")

[node name="Hole1" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(30, 867)

[node name="Hole2" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(60, 867)

[node name="Hole3" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(90, 867)

[node name="Hole4" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(120, 867)

[node name="Hole5" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(150, 867)

[node name="Hole6" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(180, 867)

[node name="Hole7" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(210, 867)

[node name="Hole8" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(240, 867)

[node name="Hole9" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(270, 867)

[node name="Hole10" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(300, 867)

[node name="Hole11" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(330, 867)

[node name="Hole12" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(360, 867)

[node name="Hole13" parent="Holes" instance=ExtResource("6_o66vm")]
modulate = Color(1, 1, 1, 1)
position = Vector2(390, 867)

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 5.0
script = ExtResource("9_xaoh2")

[connection signal="timeout" from="Funnel/Timer" to="Funnel" method="_on_timer_timeout"]
[connection signal="timeout" from="Field/Timer" to="Field/Timer" method="_on_timeout"]
[connection signal="mouse_entered" from="Control/Area2D" to="Field" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Control/Area2D" to="Field" method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Control/Start" to="Funnel" method="_on_start_pressed"]
[connection signal="pressed" from="Control/New" to="Funnel" method="_on_new_pressed"]
[connection signal="pressed" from="Control/New" to="Holes" method="_on_new_pressed"]
[connection signal="pressed" from="Control/Reset" to="Funnel" method="_on_reset_pressed"]
[connection signal="pressed" from="Control/Reset" to="Holes" method="_on_reset_pressed"]
[connection signal="timeout" from="RoundTimer" to="RoundTimer" method="_on_round_timer_timeout"]
